# PageTurnerEditor

./: BottomSeperator.qml  CMakeLists.txt  CurrentPageLabel.qml  LayersPanel.qml  LeftSeperator.qml  LeftToolbar.qml  Main.qml  MainMenubar.qml  PageView.qml  PageViewGrid.qml  PageViewRightButtonMenu.qml  PageViewRuler.qml  ProjectPage.qml  PropertiesPanel.qml  RightSeperator.qml  SelectPagePanel.qml  SelectionBox.qml  Statusbar.qml  ToolbarBtn.qml  TopSeperator.qml  main.cpp
